src/test/ui/consts/const-eval/unwind-abort.stderr
error: any use of this value will cause an error
  --> $DIR/unwind-abort.rs:5:5
   |
LL |     panic!()
   |     ^^^^^^^^
   |     |
   |     the evaluated program panicked at 'explicit panic', $DIR/unwind-abort.rs:5:5
   |     inside `foo` at $SRC_DIR/std/src/macros.rs:LL:COL
   |     inside `_` at $DIR/unwind-abort.rs:8:15
...
LL | const _: () = foo();
   | --------------------
   |
   = note: `#[deny(const_err)]` on by default
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

